k8s/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: aws-alb
    alb.ingress.kubernetes.io/scheme: internet-facing 
    #alb.ingress.kubernetes.io/target-type: ip 
    # load balancer priority, lower numbers are evaluated first
    # https://docs.aws.amazon.com/elasticloadbalancing/latest/application/listener-update-rules.html#update-rule-priority
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30" # in seconds
    alb.ingress.kubernetes.io/healthcheck-path: /healhtz
    alb.ingress.kubernetes.io/healty-threshold-count: "1"
    # by default, it will create a listener rule on port 80
    # you can specify both ports as well like this: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
  name: alb
spec:
  # if you have the `ingressclass.kubernetes.io/is-default-class=true`
  # annotation on the ingress class, you don't need this
  ingressClassName: aws-alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: app-blog
                port:
                  number: 80  
            
#    - host: nginx.example.com
#      http:
#        paths:
#          - backend:
#              service:
#                name: nginx
#                port:
#                  number: 80
#            path: /
#            pathType: Prefix
  # the ALB will fetch the right certificate from ACM
  # you can also specify manually using `alb.ingress.kubernetes.io/certificate-arn` annotation on the Ingress
  # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/ingress/annotations/#certificate-arn
  #tls:
  #  - hosts:
  #      - "*.example.com"
  #    secretName: example-tls
